tab and spacing corrections

--- a/css/main.css
+++ b/css/main.css
@@ -72,30 +72,24 @@ overflow-x: hidden;
 .nav ul {
     padding: 0;
 }
-
 .nav a { 
     color: white;
     text-decoration: none;
 }
-
 .nav li {
     display: inline-block;
     background-color: #2A0C59;
     margin: 1em;
     padding: 0;
     text-align: center;
-    width: 3em;
-    
+    width: 3em;  
 }
-
 .nav li a:hover{ 
     color:black;
 }
-
 .nav li a:active{
     color: black;
 }
-
 .nav-current:visited{
     color:black;
 }
@@ -136,25 +130,20 @@ overflow-x: hidden;
     -webkit-animation: header 4s ease-in-out infinite alternate;
     animation: header 4s ease-in-out infinite alternate;
 }
-@-webkit-keyframes header {
-    
+@-webkit-keyframes header {    
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
-@keyframes header {
-    
+@keyframes header {  
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
-
 .cloud-1 { 
     position: relative;
     left:-41em;
@@ -163,21 +152,17 @@ overflow-x: hidden;
    -webkit-animation: cloud1 7s ease-in-out infinite alternate;
     animation: cloud1 7s ease-in-out infinite alternate;
 }
-@-webkit-keyframes cloud1 {
-    
+@-webkit-keyframes cloud1 {   
     0% {
      left:-41em;  
     }
-
     100% {
      left:-45em;  
 }}
-@keyframes cloud1 {
-    
+@keyframes cloud1 {   
     0% {
      left:-41em;  
     }
-
     100% {
      left:-45em;  
 }
@@ -324,13 +309,12 @@ overflow-x: hidden;
     100% {
         transform:  scale(1.1);}
 }
-
 .ghost2 {
     width:5em;
     position: relative;
     text-align: center;
     top:-19em;
-    left:-1em;
+    left:12em;
 }
 .menu { 
     overflow: hidden;
@@ -366,13 +350,16 @@ overflow-x: hidden;
 }
 .contact {
     overflow: hidden;
-    padding:338px;
+    width:100%;
+    padding: 6em;
     background: no-repeat;
     background-image: url(../images/background-3.png);
-    background-size: 100em;
+    background-size: 80em;
     background-position: center;
     position: relative;
-    top: -8em;
+    top:-3em;
+    color: white;
+    text-align: center;
 }
 .me {
     position: relative;
@@ -405,9 +392,9 @@ overflow-x: hidden;
     position: relative;
     text-align: center;
     top:-19em;
-    left:24em;
+    left:34em;
 }
-.images {
+    .images {
     display: inline-block;
     width: 50em;
     padding:10em;
@@ -447,6 +434,14 @@ button a:hover {
     background-color: #2A0C59;
     color: black;
 }
+.banner {
+    overflow: hidden;
+    padding:12.5em;
+    background: no-repeat;
+    background-image: url(../images/background-1.png);
+    background-size: 122em;
+    background-position: center;
+}
 .banner-header {
     overflow:hidden;
     position: relative;
@@ -463,7 +458,7 @@ button a:hover {
     margin: none;
     position: relative;
     top:5em;
-    left:7%;
+    left:7em;
     background-size: 100%;
     background-position: center;
     background-image: no-repeat;
@@ -485,21 +480,18 @@ button a:hover {
    -webkit-animation: cloud1 7s ease-in-out infinite alternate;
     animation: cloud1 7s ease-in-out infinite alternate;
 }
-@-webkit-keyframes cloud1 {
-    
+@-webkit-keyframes cloud1 {   
     0% {
      left:-13em;  
     }
-
     100% {
      left:-9em;  
 }}
 @keyframes cloud1 {
-    
+   
     0% {
      left:-13em;  
     }
-
     100% {
      left:-9em;  
 }
@@ -512,21 +504,17 @@ button a:hover {
     -webkit-animation: cloud2 7s ease-in-out infinite alternate;
     animation: cloud2 7s ease-in-out infinite alternate;
 }
-@-webkit-keyframes cloud2 {
-    
+@-webkit-keyframes cloud2 {  
     0% {
      left:30em;  
     }
-
     100% {
      left:35em;  
 }}
 @keyframes cloud2 {
-    
     0% {
      left:30em;  
     }
-
     100% {
      left:35em;  
 }
@@ -535,7 +523,7 @@ button a:hover {
     overflow: hidden;
     position: relative;
     width: 40em;
-    top: 10em;
+    top: 11em;
     left: 43%;
 }
 .ghost2 {
@@ -546,8 +534,7 @@ button a:hover {
     left:39em;
 }
 }
-@media only screen and (min-width: 60em) {
-    
+@media only screen and (min-width: 60em) {    
 .button-2 {
     position: relative;
     top: 38em;
@@ -569,15 +556,12 @@ button a:hover {
     width: 2em;
     
 }
-
 .nav li a:hover{ 
     color:black;
 }
-
 .nav li a:active{
     color: black;
 }
-
 .nav-current:visited{
     color:black;
 }
@@ -588,10 +572,10 @@ button a:hover {
 }
 .banner {
     overflow: hidden;
-    padding:12em;
+    padding:13em;
     background: no-repeat;
     background-image: url(../images/background-1.png);
-    background-size: 120em;
+    background-size: 121em;
     background-position: center;
 }
 .banner-header {
@@ -602,21 +586,17 @@ button a:hover {
     -webkit-animation: header 4s ease-in-out infinite alternate;
     animation: header 4s ease-in-out infinite alternate;
 }
-@-webkit-keyframes header {
-    
+@-webkit-keyframes header {  
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
-@keyframes header {
-    
+@keyframes header {  
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
@@ -635,7 +615,6 @@ button a:hover {
     background-size: 120em;
     background-position: center;
     position: relative;
-    top:-3em;
 }
 .cloud-1 { 
     position: relative;
@@ -645,21 +624,17 @@ button a:hover {
    -webkit-animation: cloud1 7s ease-in-out infinite alternate;
     animation: cloud1 7s ease-in-out infinite alternate;
 }
-@-webkit-keyframes cloud1 {
-    
+@-webkit-keyframes cloud1 { 
     0% {
      left:-33em;  
     }
-
     100% {
      left:-39em;  
 }}
-@keyframes cloud1 {
-    
+@keyframes cloud1 {  
     0% {
      left:-33em;  
     }
-
     100% {
      left:-39em;  
 }
@@ -672,12 +647,10 @@ button a:hover {
     -webkit-animation: cloud2 7s ease-in-out infinite alternate;
     animation: cloud2 7s ease-in-out infinite alternate;
 }
-@-webkit-keyframes cloud2 {
-    
+@-webkit-keyframes cloud2 {  
     0% {
      left:18em;  
     }
-
     100% {
      left:24em;  
 }}
@@ -686,7 +659,6 @@ button a:hover {
     0% {
      left:18em;  
     }
-
     100% {
      left:24em;  
 }
@@ -698,7 +670,7 @@ button a:hover {
     margin: none;
     position: relative;
     top:10em;
-    left:14em;
+    left:15em;
     background-size: 100%;
     background-position: center;
     background-image: no-repeat;
@@ -720,21 +692,17 @@ button a:hover {
     -webkit-animation: header 4s ease-in-out infinite alternate;
     animation: header 4s ease-in-out infinite alternate;
 }
-@-webkit-keyframes header {
-    
+@-webkit-keyframes header {    
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
-@keyframes header {
-    
+@keyframes header {    
     0% {
      tranform: scale(1);   
     }
-
     100% {
         transform:  scale(1.1);}
 }
@@ -754,10 +722,8 @@ button a:hover {
 }
 .js-ghost2{ 
     -webkit-animation: ghost 1s linear;
-
     animation: ghost2 1s linear;
 }
-
 @-webkit-keyframes ghost2 {
     0% {
         top:-29em;
@@ -790,8 +756,7 @@ button a:hover {
     -webkit-animation: oooh2 1s ease-in-out infinite alternate;
     animation: oooh2 1s ease-in-out infinite alternate;
 }
-@-webkit-keyframes oooh2 {
-    
+@-webkit-keyframes oooh2 {  
     0% {
      tranform: scale(1);   
     }
@@ -818,7 +783,6 @@ button a:hover {
 
     animation: ghost 1s linear;
 }
-
 @-webkit-keyframes ghost {
     0% {
         top:-39em;
@@ -847,13 +811,11 @@ button a:hover {
         left: 6em
     }
 }
- 
 .ghost:hover #mouth {
     -webkit-animation: oooh 1s ease-in-out infinite alternate;
     animation: oooh 1s ease-in-out infinite alternate;
 }
-@-webkit-keyframes oooh {
-    
+@-webkit-keyframes oooh {   
     0% {
      tranform: scale(1);   
     }
